@@ -1,4 +1,8 @@
-﻿shmuel 21.02.2015 00:56:10 +0200 - build 485
+﻿shmuel 21.02.2015 19:30:30 +0200 - build 486
+
+1. Рефакторинг.
+
+shmuel 21.02.2015 00:56:10 +0200 - build 485
 
 1. Рефакторинг.
 
